# test-fixer

./: .gitignore  README.md  pyproject.toml
_just_for_now/: examples_tests_output.txt
_just_for_now/examples/src/: sum.py
examples/src/: sum.py
examples/tests/: test_sum.py
src/test_fixer/: __init__.py
test_fixer/: __init__.py  __main__.py  backend.py  communication_model.py  old_prompt.txt  prompt.txt  utils.py
tests/functional/simple/: test_examples.py
tests/functional/simple/examples/: .gitignore
tests/functional/simple/examples/tests/: test_dummy_tests_failing.py
